--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -23,7 +23,7 @@
             
               <div class="row mb-5 mt-5 ">
               <div class="col-md-12 mb-5">
-                <h2>My Latest Posts</h2>
+                <h2>Latest Posts</h2>
               </div>
               <div class="col-md-12">
                 {% for post in latest_posts %}
