--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -3,6 +3,8 @@
 {% block title %}Reset Password{% endblock title %}
 
     {% block content %}
+    <section class="site-section">
+      <div class="container">
         <div class="row mb-4">
           <div class="col-md-6 text-center">
             <h1>Reset Password</h1>
@@ -71,6 +73,10 @@
                     </div>
                 </form>
           </div>
+        {% include "core/sidebar.html" %}
+        </div>
+      </div>
+    </section>
   
 {% endblock content %}
 {% block js_down %}
