--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -2,9 +2,10 @@
 {% load static %}
 {% block title %}About{% endblock title %}
 
-  <section class="site-section pt-5">
-      <div class="container">
+  
         {% block content %}
+        <section class="site-section pt-5">
+      <div class="container">
         <div class="row blog-entries">
           <div class="col-md-12 col-lg-8 main-content">
             
@@ -30,7 +31,7 @@
                     <div class="image" style="background-image: url(images/img_10.jpg);"></div>
                     <span class="text">
                       <div class="post-meta">
-                        <span class="author mr-2"><img src="images/person_1.jpg" alt="Colorlib"> Colorlib</span>&bullet;
+                        <span class="author mr-2"><img src="images/person_1.jpg" alt="Colorlib"><a href="">Colorlib</a></span>&bullet;
                         <span class="mr-2">March 15, 2018 </span> &bullet;
                         <span class="ml-2"><span class="fa fa-comments"></span> 3</span>
                       </div>
@@ -59,6 +60,10 @@
               </div>
             </div>
           </div>
+          {% include "core/sidebar.html" %}
+        </div>
+      </div>
+        </section>
 {% endblock content %}
 
 {% block js_down %}
