--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -67,7 +67,7 @@
                   <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" id="category" href="category.html" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Account</a>
                   <div class="dropdown-menu" aria-labelledby="dropdown05">
-                    <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
+                    <a class="dropdown-item" href="{% url 'profile' request.session.username %}">View Profile</a>
                     <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
                   </div>
                 </li>
@@ -102,86 +102,10 @@
       </header>
       <!-- END header -->
 
-<section class="site-section">
-  <div class="container">
 {% block content %}
-  
+
 {% endblock content %}
-{% if not request.path == '/accounts/profile' %}
-      <div class="col-md-12 col-lg-4 sidebar">
-            
-            <!-- END sidebar-box -->
-            <!-- <div class="sidebar-box" style="margin-top: 140px;">
-              <div class="bio text-center">
-                <img src="{% static 'images/circle-cropped.png' %}" alt="Image Placeholder" class="img-fluid">
-                <div class="bio-body">
-                  <h2>Ashutosh Krishna</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem facilis sunt repellendus excepturi beatae porro debitis voluptate nulla quo veniam fuga sit molestias minus.</p>
-                  <p><a href="{% url 'about' %}" class="btn btn-primary btn-sm rounded">Read my bio</a></p>
-                  <p class="social">
-                    <a href="{{links.facebook}}" class="p-2"><span class="fa fa-facebook"></span></a>
-                    <a href="{{links.twitter}}" class="p-2"><span class="fa fa-twitter"></span></a>
-                    <a href="{{links.instagram}}" class="p-2"><span class="fa fa-instagram"></span></a>
-                    <a href="{{links.portfolio}}" class="p-2"><span class="fa fa-globe"></span></a>
-                  </p>
-                </div>
-              </div>
-            </div> -->
-            <!-- END sidebar-box -->  
-            <div class="sidebar-box">
-              <h3 class="heading">Popular Posts</h3>
-              <div class="post-entry-sidebar">
-                <ul>
-                  {% for post in popular_posts %}
-                    
-                  <li>
-                    <a href="{% url 'single' post.slug %}">
-                      <img src="{{post.thumbnail.url}}" alt="Image placeholder" class="mr-4">
-                      <div class="text">
-                        <h4>{{post.title}}</h4>
-                        <div class="post-meta">
-                          <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
 
-                  {% endfor %}
-                </ul>
-              </div>
-            </div>
-            <!-- END sidebar-box -->
-
-            <div class="sidebar-box">
-              <h3 class="heading">Categories</h3>
-              <ul class="categories">
-                {% for category in categories %}
-                
-                <li><a href="{% url 'category' category.name %}">{{category.name}} <span></span></a></li>
-                
-                {% endfor %}
-              </ul>
-            </div>
-            <!-- END sidebar-box -->
-
-            <div class="sidebar-box">
-              <h3 class="heading">Tags</h3>
-              <ul class="tags">
-                {% for tag in tags %}
-                  
-                <li><a href="{% url 'tag' tag.name %}">{{tag.name}}</a></li>
-                
-                {% endfor %}
-              </ul>
-            </div>
-          </div>
-          <!-- END sidebar -->
-            
-{% endif %}
-
-        </div>
-</div>
-</section>
 
 <footer class="site-footer">
         <div class="container">
