--- a/templates/core/category.html
+++ b/templates/core/category.html
@@ -4,6 +4,8 @@
 
 
 {% block content %}
+<section class="site-section pt-5">
+      <div class="container">
         <div class="row mb-4">
           <div class="col-md-6">
             <h2 class="mb-4">{{category.name}}</h2>
@@ -33,7 +35,7 @@
                 <h4 class="text-center">No posts yet</h4>
                 {% endfor %}
                 <!-- END post -->
-
+                
               </div>
             </div>
 
@@ -56,5 +58,8 @@
             
 
           </div>
-  
-    {% endblock content %}
+          {% include "core/sidebar.html" %}
+        </div>
+      </div>
+</section>
+{% endblock content %}
