--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -3,6 +3,8 @@
 {% block title %}Home{% endblock title %}
 
       {% block content %}
+      <section class="site-section pt-5 pb-5">
+        <div class="container">
           <div class="row">
             <div class="col-md-12">
 
@@ -30,14 +32,12 @@
               
             </div>
           </div>
-          
         </div>
-
-
       </section>
+         
       <!-- END section -->
 
-      <section class="site-section py-sm">
+      <section class="site-section py-sm ">
         <div class="container">
           <div class="row">
             <div class="col-md-6">
@@ -84,7 +84,12 @@
                   </nav>
                 </div>
               </div>
-              </div>
+            </div>
+            {% include "core/sidebar.html" %}
+          </div>
+          </div>
+      </section>
+
 
 
  {% endblock content %}
