--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -21,7 +21,7 @@
                     <div class="image element-animate" data-animate-effect="fadeIn" style="background-image: url({{post.thumbnail.url}});"></div>
                     <span class="text">
                       <div class="post-meta">
-                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.get_full_name}}</span>&bullet;
+                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> <a href="{% url 'profile' post.author.username %}">{{post.author.get_full_name}}</a></span>&bullet;
                         <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
                       </div>
                       <h2>{{post.title}}</h2>
