Fix profile url, profile page

--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -84,7 +84,7 @@
             </center>
         </div>
         <div class="col-md-4">
-            <a href="{% url 'signup' %}">Forgot Password?</a>
+            <a href="{% url 'forgot_password' %}">Forgot Password?</a>
         </div>
       </div>
     </form>
