--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -151,7 +151,7 @@
           <a
             href="{% url 'single' post.slug %}"
             class="a-block sm d-flex align-items-center height-md"
-            style="background-image: url('{{post.thumbnail.url}}')"
+            style="background-image: url('{{post.thumbnail.url}}');"
           >
             <div class="text">
               <div class="post-meta">
