--- a/templates/core/sidebar.html
+++ b/templates/core/sidebar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<div class="col-md-12 col-lg-4 sidebar">
+<div class="col-md-12 col-lg-4 sidebar mt-4">
   <!-- END sidebar-box -->
   <!-- <div class="sidebar-box" style="margin-top: 140px;">
               <div class="bio text-center">
