--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -4,7 +4,8 @@
 
 
 {% block content %}
-
+<section class="site-section pt-5" style="margin-top: 30px;">
+      <div class="container">
   <div class="bio text-center">
                 <img src="{{user.profile_image.url}}" alt="Image Placeholder" class="img-fluid">
                 <div class="bio-body">
@@ -46,4 +47,6 @@
             </div>
             
               {% endif %}
+          </div>
+          </section>
 {% endblock content %}
