--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -4,6 +4,8 @@
 
 
 {% block content %}
+<section class="site-section pt-5">
+      <div class="container">
         <div class="row mb-4">
           <div class="col-md-6">
             <h2 class="mb-4">#{{tag.name}}</h2>
@@ -21,7 +23,7 @@
                     <div class="image element-animate" data-animate-effect="fadeIn" style="background-image: url({{post.thumbnail.url}});"></div>
                     <span class="text">
                       <div class="post-meta">
-                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> <a href="{% url 'profile' post.author.username %}">{{post.author.get_full_name}}</a></span>&bullet;
+                        <span class="author mr-2"><img src="{{post.author.profile_image.url}}" alt="Colorlib"> {{post.author.get_full_name}}</span>&bullet;
                         <span class="mr-2">{{post.timestamp|date:"F d Y"}} </span>
                       </div>
                       <h2>{{post.title}}</h2>
@@ -55,5 +57,9 @@
             
 
           </div>
+          {% include "core/sidebar.html" %}
+        </div>
+      </div>
+      </section>
   
     {% endblock content %}
