--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -89,7 +89,7 @@
       </div>
     </form>
   </div>
-  {% include "core/sidebar.html" %}
+  {% include "partials/sidebar.html" %}
 </div>
   </div>
 </section>
