--- a/templates/authentication/signup.html
+++ b/templates/authentication/signup.html
@@ -78,7 +78,7 @@
                 </form>
             
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
     </section>
