--- a/templates/core/tag.html
+++ b/templates/core/tag.html
@@ -57,7 +57,7 @@
             
 
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
       </section>
