--- a/templates/authentication/reset-password.html
+++ b/templates/authentication/reset-password.html
@@ -73,7 +73,7 @@
                     </div>
                 </form>
           </div>
-        {% include "core/sidebar.html" %}
+        {% include "partials/sidebar.html" %}
         </div>
       </div>
     </section>
