--- a/templates/core/about.html
+++ b/templates/core/about.html
@@ -60,7 +60,7 @@
               </div>
             </div>
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
         </section>
