--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -29,6 +29,10 @@
       </p>
     </div>
 
+    <div id="like-section">
+      {% include "partials/like.html" %}
+    </div>
+
     <div class="share-btn-container pt-3">
       <h3>
         Share on : &nbsp;
@@ -133,7 +137,7 @@
     </div>
   </div>
 
-  {% include "core/sidebar.html" %}
+  {% include "partials/sidebar.html" %}
   
   {% if related_posts|length > 0 %}
     
