--- a/templates/core/category.html
+++ b/templates/core/category.html
@@ -58,7 +58,7 @@
             
 
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
 </section>
