--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -46,7 +46,7 @@
             
 
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
     </section>
