--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -85,7 +85,7 @@
                 </div>
               </div>
             </div>
-            {% include "core/sidebar.html" %}
+            {% include "partials/sidebar.html" %}
           </div>
           </div>
       </section>
