--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -50,7 +50,7 @@
             </div>
 
           </div>
-          {% include "core/sidebar.html" %}
+          {% include "partials/sidebar.html" %}
         </div>
       </div>
     </section>
