--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -37,6 +37,10 @@
       
         <div>
           {% include "partials/like.html" %}
+          <div
+            class="likeFeedBackArea invalid-feedback"
+            style="display: none"
+          ></div>
         </div>
         <div>
           <h4>
