--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -5,11 +5,11 @@
 
 {% block content %}
 <section class="site-section pt-5" style="margin-top: 30px;">
-      <div class="container">
+      <div class="container" >
   <div class="bio text-center">
                 <img src="{{user.profile_image.url}}" alt="Image Placeholder" class="img-fluid">
                 <div class="bio-body">
-                  <h2>{{user.get_full_name}}</h2>
+                  <h2>{{user.get_full_name}} <a href="{% url 'edit_profile' user.username %}"><i class="fa fa-pencil-square-o ml-2" aria-hidden="true" style="color: black;"></i></a></h2>
                   <p>{{user.about}}</p>
                   
                   <p class="social">
