--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1088,6 +1088,7 @@ textarea.form-control {
   .post-entry-horzontal a {
     overflow: hidden;
     display: table;
+    width: 100%;
     position: relative;
     top: 0;
     -webkit-transition: .1s all ease;
