--- a/templates/authentication/edit_profile.html
+++ b/templates/authentication/edit_profile.html
@@ -67,7 +67,7 @@
                     <div class="row">
                     <div class="col-md-12 form-group">
                       <label for="title">Title</label>
-                      <input type="text" id="title" name="title" class="form-control" value="{{user.work.employer_title}}" required>
+                      <input type="text" id="title" name="title" class="form-control" value="{{user.work.employer_title}}">
                     </div>
                     <div class="col-md-12 form-group">
                       <label for="institution">Institution / Organisation</label>
